[package]
name = "shimarin"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
html2text = "0.9"
octocrab = "0.37"
poise = "0.6"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
